# naseerai-mobile

./: .gitignore  CLAUDE.md  Makefile  README.md  pubspec.yaml  sample_embeddings.json
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/cpp/include/: model_interface.h
android/app/src/main/cpp/src/: model_interface.cpp  model_loader.cpp  model_loader.h  text_generator.cpp  text_generator.h  tokenizer.cpp  tokenizer.h
android/app/src/main/kotlin/com/example/naseerai/: MainActivity.kt
assets/models/: phi2_demo_placeholder.tflite
docs/: NATIVE_MODELS.md  USAGE_GUIDE.md
lib/: main.dart
lib/models/: ai_model.dart  chat_message.dart  cpp_model.dart  search_result.dart
lib/screens/: capsules_screen.dart  chat_screen.dart  home_screen.dart
lib/services/: capsule_search_service.dart  chat_service.dart  gguf_model_service.dart  llama_service.dart  model_manager.dart  model_runner.dart  native_model_service.dart  ollama_service.dart
lib/utils/: constants.dart  crash_recovery.dart  device_info.dart  memory_monitor.dart  model_config_optimizer.dart  permission_utils.dart  response_parser.dart
lib/widgets/: available_capsules_widget.dart  chat_input_widget.dart  chat_message_widget.dart  model_install_dialog.dart  suggestions_widget.dart  typing_indicator.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
sample_capsules/: Burns_First_aid_embeddings.json  Cuts_and_scrapes_First aid_embeddings.json
scripts/: build_native_lib.sh  copy_native_libs.sh  download_models.sh  download_phi2.sh  download_qwen2.sh  fix_openmp.sh
test/: widget_test.dart
